# dbt-sl-streamlit

./: .gitignore  README.md  Untitled.ipynb  chart.py  client.py  config.yaml  helpers.py  jdbc_api.py  pyproject.toml  queries.py  query.py  requirements.in  requirements.txt  schema.py  🏠_Home.py
.streamlit/: secrets.toml.example
chroma_db/: chroma.sqlite3
chroma_db/dimensions/: chroma.sqlite3
chroma_db/metrics/: chroma.sqlite3
llm/: examples.py  graph.py  prompt.py  providers.py  retriever.py  schema.py  semantic_layer_docs.py  state.py
llm/tools/: __init__.py  docs.py  query.py  retriever.py
pages/: 01_🌌_Query_Builder.py  01_🌌_Query_Metrics.py  01_🌌_View_Metrics.py  01_🔭_Explore_JDBC_API.py  02_🌌_Query_Metrics.py  02_🔭_Explore_API.py  02_🧠_LLM.py  03_👍_Feedback.py  03_🔭_Explore_API.py  03_🧑‍💻_Embedded.py  03_🧠_LLM.py  04_👍_Feedback.py  04_🔭_Explore_API.py  05_👍_Feedback.py
