[tool.poetry]
name = "streamlit-sl"
version = "0.1.0"
description = "Streamlit application for the dbt Cloud Semantic Layer"
authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.25.0"
plotly = "^5.15.0"
requests = "^2.31.0"
pyarrow = "^13.0.0"
langchain = "^0.0.306"
openai = "^0.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
