[tool.poetry]
name = "streamlit-sl"
version = "0.1.0"
description = "Streamlit application for the dbt Cloud Semantic Layer"
authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
streamlit = "^1.35"
plotly = "^5.15.0"
requests = "^2.31.0"
pyarrow = "^15.0.0"
langchain = "^0.2"
openai = "^1.0"
streamlit-authenticator = "^0.3.2"
langchain-openai = "^0.1"
langgraph = "0.0.59"
langchain-community = "^0.2.1"
dbtc = "^0.11.3"
langsmith = "^0.1.67"
langchain-chroma = "^0.1.1"
streamlit-feedback = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
